@@ -14,6 +14,7 @@ Version 0.99.6
     - The action "--deps" in rubber-info now lists each dependency only once.
     - Kpathsea messages are now reported also during compilation.
     - Avoided some crashes due to file name tracking in rubber-info.
+    - Fixed and improved CWEB support.
 
 Version 0.99.5 (2002-12-04)
 
